# MBA_Thesis

./: README.md  pyproject.toml
assets/: ERD.drawio  fluxo_dados.drawio
conf/base/: catalog.yml  parameters.yml
conf/base/catalog/: feature.yml  model_input.yml  model_output.yml  models.yml  primary.yml  raw.yml  reporting.yml  spine.yml
conf/base/parameters/: commons.yml  feature.yml  master_table.yml  models.yml  primary.yml  raw.yml  spine.yml
docs/: biz_rules.md  data_flow.md
docs/source/: conf.py  index.rst
notebooks/: logreg_params_opt.ipynb  logreg_rpt.ipynb  master_table.ipynb  master_table_ftes.ipynb  vif.ipynb
notebooks/model/: logreg_rpt.ipynb
notebooks/model_paramsOpt/: PCA.ipynb  semPCA.ipynb
notebooks/prm/: analise_fin.ipynb
notebooks/spine/: checar_diff_2dataPoints_cliente.ipynb  checar_diff_datas.ipynb
src/: requirements.txt  setup.py
src/itaete_buy_prop/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/itaete_buy_prop/nodes/: BKP_fx.py  __init__.py  analise_fin.py  cen_visitas.py  clientes.py  custo_producao.py  funil_vendas.py  ipca.py  logreg.py  master_table.py  origem_receita_frota.py  precos_diesel.py  precos_laranja.py  precos_trator_cxlaranja.py  precos_trator_potencia.py  producao.py  quali_clientes.py  quali_clientes_crm.py  selic.py  spine.py  ultimos_dados.py  yfinance.py
src/itaete_buy_prop/pipelines/: BKP_quali_clientes_crm_pipeline.py  __init__.py  analise_fin_pipeline.py  cen_visitas_pipeline.py  clientes_pipeline.py  custo_producao_pipeline.py  funil_vendas_pipeline.py  fx_pipeline.py  (+13 more)
src/tests/: test_run.py
(+2 files in other folders)
